--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+  .active1 {
+    @apply !bg-green-700 !text-white;
+  }
+
+  .pending {
+    @apply bg-red-400 text-white;
+  }
+}
