food details removed for privet route, redirect to login page if user not logged in if user want to request food from details

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@
     @apply !bg-green-700 !text-white;
   }
 
+  .section {
+    @apply max-w-screen-xl mx-auto px-4 my-16 lg:my-20 py-8;
+  }
+
   .pending {
     @apply bg-red-400 text-white;
   }
