--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
 
   
   .section {
-    @apply max-w-screen-xl mx-auto px-4 my-8 md:my-12 lg:my-16 py-8;
+    @apply max-w-screen-xl mx-auto px-4 my-8 md:my-12 lg:my-16;
   }
   
   .page {
